[FIX] stock_quant_package_product_packaging: Remove groups attribute from view
As Odoo introduced a new constraint on domains, fields that are used in those domains
can't have groups.

--- a/stock_quant_package_product_packaging/views/stock_quant_package.xml
+++ b/stock_quant_package_product_packaging/views/stock_quant_package.xml
@@ -6,8 +6,8 @@
         <field name="inherit_id" ref="stock.view_quant_package_form" />
         <field name="arch" type="xml">
             <field name="company_id" position="before">
-                <field name="single_product_id" groups="base.group_no_one" />
-                <field name="single_product_qty" groups="base.group_no_one" />
+                <field name="single_product_id" invisible="1" />
+                <field name="single_product_qty" invisible="1" />
                 <field
                     name="product_packaging_id"
                     domain="[('product_id', '=', single_product_id), ('qty', '=', single_product_qty)]"
